Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54803

ChartView does not repaint when reopening window using QtQuick2DRender

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.2
    • 5.7.0
    • Charts, Quick: 2D Renderer
    • None
    • Windows 10 64-bit, NVidia GTX 980M and GT 550, Qt 5.7.0 MinGW 32bit binary downloaded from qt.io, Linux/XCB
    • 0d255307d26de786ba7535d76ac6f27c4c139d5e

      When using the Qt Quick 2D Renderer, if you close and reopen a window containing a ChartView, the chart is invisible until it is forced to redraw by resizing the window or moving the mouse over it.

      A test case is attached. To reproduce, build and run, then click "Show Chart Window". A window will display with a line series in a chart. Close the window and reopen it by clicking the button again; the window will appear with blank white contents. Moving the mouse over the window or resizing it will cause the chart to reappear.

      While running this test case and my application, I noticed numerous copies of

      Updates can only be scheduled from GUI thread or from QQuickItem::updatePaintNode()
       

      in the console.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            dbrunner Doug Brunner
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes