Ensure the chart is drawn whenever the render node is recreated

Some QtQuick backends such as 2D renderer recreate the
render node every time the window is shown, so we must ensure the
existing chart image is also redrawn when the node is recreated.

Task-number: QTBUG-54803
Change-Id: I61e54a0fa608c1ff888a374c838fc974dfb5d5dc
Reviewed-by: Janne Koskinen <janne.p.koskinen@theqtcompany.com>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>